# corefacility

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  corefacility  pyproject.toml
Docker/: .gitignore  abstract-server.Dockerfile  base.Dockerfile  docker-compose.yaml  lpss-server.Dockerfile  nginx.conf  nginx.list  standalone.Dockerfile  test.Dockerfile  virtual-server.Dockerfile
Docker/lpss-server.cfg/: hosts
Docker/lpss-server.cfg/ssh/: ssh_host_ecdsa_key.pub
Docker/lpss-server.settings/: basics.env  email.env  preliminary.env  secret.env  security.env  sql.env  staticfiles.env
Docker/standalone.settings/: basics.env  email.env  preliminary.env  secret.env  sql.env  staticfiles.env
Docker/virtual-server.settings/: basics.env  preliminary.env  secret.env  sql.env
corefacility/: build.py  manage.py
corefacility/authorizations/cookie/: __init__.py  apps.py
corefacility/authorizations/google/: __init__.py  apps.py
corefacility/authorizations/ihna/: __init__.py  apps.py
corefacility/authorizations/mailru/: __init__.py  apps.py
corefacility/core/: __init__.py  api_exceptions.py  api_urls.py  authentication.py  pagination.py  permissions.py  transaction.py  utils.py
corefacility/core/authorizations/: __init__.py  auto.py  login_password.py  password_recovery.py  password_recovery_serializer.py  standard.py  standard_serializer.py  unix.py
corefacility/corefacility/: asgi.py  log.py  settings.py  settings_launcher.py  settings_old.py  urls.py  wsgi.py
corefacility/imaging/: __init__.py  api_exceptions.py  api_urls.py  decorators.py  generics.py  serializers.py
corefacility/roi/: __init__.py  api_exceptions.py  api_urls.py  apps.py
frontend/: build.sh  main.min.js  minify.sh  package-lock.json
frontend/common_components/: template.js  utils.js
frontend/common_styles/: common.css  index.css
server_config/: corefacility.service  gunicorn.service
server_config/nginx/: default.conf
sever_config/rsyslog.d/: corefacility.conf
(+2029 files in other folders)
